# RussianCheckers

./: .gitignore  CMakeLists.txt  README.md  main.qml
.github/workflows/: cmake.yml
checkers/: CMakeLists.txt  checkers.pro  main.cpp  main.qml  model.h
include/: bit_algo.h  boardstate.h  checkerslogic.h  constants.h  defines.h  direction.h  history.h  model.h  network_connection.h  pdn.h  pdnparser.h
src/: bit_algo.cpp  boardstate.cpp  checkerslogic.cpp  direction.cpp  history.cpp  main.cpp  model.cpp  network_connection.cpp  pdn.cpp  pdnparser.cpp
test/: test_bit_algo.cpp  test_board_state.cpp  test_direction.cpp  test_history.cpp  test_logic.cpp  test_model.cpp  test_pdn.cpp  test_pdn_parser.cpp
